--- a/KDZ_CRM_MoiseevR/Administrator_Menu.xaml
+++ b/KDZ_CRM_MoiseevR/Administrator_Menu.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="300" d:DesignWidth="300"
       Title="Administrator_Menu">
 
-    <Grid>
+    <Grid Margin="0,0,-12,0">
         <Button x:Name="Company_Search" Content="Компании" HorizontalAlignment="Left" Margin="189,44,0,0" VerticalAlignment="Top" Width="75" Click="Company_Search_Click"/>
         <Button x:Name="Person_Search" Content="Контактные лица" HorizontalAlignment="Left" Margin="169,101,0,0" VerticalAlignment="Top" Width="107" Click="Person_Search_Click"/>
         <Button x:Name="Contact_Search" Content="Контакты" HorizontalAlignment="Left" Margin="182,149,0,0" VerticalAlignment="Top" Width="75" Click="Contact_Search_Click"/>
