--- a/KDZ_CRM_MoiseevR/Contact_Search_User.xaml
+++ b/KDZ_CRM_MoiseevR/Contact_Search_User.xaml
@@ -1,15 +1,16 @@
-﻿<Window x:Class="KDZ_CRM_MoiseevR.Company_Search"
+﻿<Window x:Class="KDZ_CRM_MoiseevR.Contact_Search_User"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KDZ_CRM_MoiseevR"
         mc:Ignorable="d"
-        Title="Company_Search" Height="300" Width="300">
+        Title="Contact_Search_User" Height="300" Width="300">
     <Grid>
-        <Button x:Name="Back_Menu" Content="Назад в меню" HorizontalAlignment="Left" Margin="193,197,0,0" VerticalAlignment="Top" Width="86" Click="Back_Menu_Click"/>
-        <Frame Name="FrameCompanySearch" NavigationUIVisibility="Hidden" Margin="5,50,0,135">
-            
+        <Frame Name="FrameContactSearch_User" NavigationUIVisibility="Hidden" Margin="5,50,0,135">
+
         </Frame>
+        <Button x:Name="Back_Menu" Content="Назад в меню" HorizontalAlignment="Left" Margin="169,217,0,0" VerticalAlignment="Top" Width="75" Click="Back_Menu_Click"/>
+
     </Grid>
 </Window>
