--- a/KDZ_CRM_MoiseevR/Person_Search_Admin.xaml
+++ b/KDZ_CRM_MoiseevR/Person_Search_Admin.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="KDZ_CRM_MoiseevR.Person_Search"
+﻿<Window x:Class="KDZ_CRM_MoiseevR.Person_Search_Admin"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,7 +8,7 @@
         Title="Person_Search" Height="300" Width="300">
     <Grid>
         <Button x:Name="Back_Menu" Content="Назад в меню" HorizontalAlignment="Left" Margin="191,210,0,0" VerticalAlignment="Top" Width="92" Click="Back_Menu_Click"/>
-        <Frame Name="FramePersonSearch" NavigationUIVisibility="Hidden" Margin="5,50,0,135">
+        <Frame Name="FramePersonSearch_Admin" NavigationUIVisibility="Hidden" Margin="5,50,0,135">
 
         </Frame>
     </Grid>
