--- a/KDZ_CRM_MoiseevR/Person_Search_User.xaml
+++ b/KDZ_CRM_MoiseevR/Person_Search_User.xaml
@@ -1,15 +1,16 @@
-﻿<Window x:Class="KDZ_CRM_MoiseevR.Contact_Search"
+﻿<Window x:Class="KDZ_CRM_MoiseevR.Person_Search_User"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KDZ_CRM_MoiseevR"
         mc:Ignorable="d"
-        Title="Contact_Search" Height="300" Width="300">
+        Title="Person_Search_User" Height="300" Width="300">
     <Grid>
-        <Button x:Name="Back_Menu" Content="Назад в меню" HorizontalAlignment="Left" Margin="179,182,0,0" VerticalAlignment="Top" Width="97" Click="Back_Menu_Click"/>
-        <Frame Name="FrameContactSearch" NavigationUIVisibility="Hidden" Margin="5,50,0,135">
+        <Frame Name="FramePersonSearch_User" NavigationUIVisibility="Hidden" Margin="5,50,0,135">
 
         </Frame>
+        <Button x:Name="Back_Menu" Content="Назад в меню" HorizontalAlignment="Left" Margin="154,223,0,0" VerticalAlignment="Top" Width="132" Click="Back_Menu_Click"/>
+
     </Grid>
 </Window>
