--- a/KDZ_CRM_MoiseevR/LoginPage.xaml
+++ b/KDZ_CRM_MoiseevR/LoginPage.xaml
@@ -6,19 +6,19 @@
       xmlns:local="clr-namespace:KDZ_CRM_MoiseevR"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
-      Title="LoginPage" PreviewKeyDown="Page_PreviewKeyDown">
+      Title="Авторизация" PreviewKeyDown="Page_PreviewKeyDown">
 
     <Grid>
-        <TextBox x:Name="textBoxLogin" Height="25" Margin="11,193,10,0" 
-                 TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-        <PasswordBox x:Name="passwordBox" Margin="10,229,10,0" VerticalAlignment="Top" Height="25"/>
-        <Button x:Name="buttonLogin" Content="Войти" Margin="159,265,21,0" 
-                VerticalAlignment="Top" Width="120" Height="25" HorizontalAlignment="Center" Click="buttonLogin_Click" IsDefault="True"/>
-        <Image x:Name="LoginPicture" HorizontalAlignment="Left" Height="128" Margin="13,32,0,0" VerticalAlignment="Top" Width="274"/>
-        <Frame Name="FrameLoginPage" NavigationUIVisibility="Hidden" Margin="0,0,0,126">
 
-        </Frame>
+        <TextBox x:Name="textBoxLogin" Height="25" Margin="11,157,6,0" 
+                 TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
+        <PasswordBox x:Name="passwordBox" Margin="15,225,5,0" VerticalAlignment="Top" Height="25" Grid.ColumnSpan="2"/>
+        <Button x:Name="buttonLogin" Content="Войти" Margin="170,262,10,0" 
+                VerticalAlignment="Top" Width="120" Height="28" HorizontalAlignment="Center" Click="buttonLogin_Click" IsDefault="True" />
         <Button x:Name="buttonExit" Content="Выход из приложения" HorizontalAlignment="Left" Margin="13,262,0,0" VerticalAlignment="Top" Width="127" Height="30" Click="buttonExit_Click"/>
+        <TextBlock x:Name="textBlock_Log" HorizontalAlignment="Left" Margin="16,128,0,0" TextWrapping="Wrap" Text="Введите логин" VerticalAlignment="Top" Height="16" Width="104"/>
+        <TextBlock x:Name="textBlock_Pas" HorizontalAlignment="Left" Margin="14,200,0,0" TextWrapping="Wrap" Text="Введите пароль" VerticalAlignment="Top" Width="131" Height="26"/>
+        <TextBlock x:Name="textBlock_Hello" HorizontalAlignment="Center" Margin="0,50,0,0" TextWrapping="Wrap" Text="Здравствуйте!" VerticalAlignment="Top" Height="21" Width="83"/>
 
     </Grid>
 </Page>
