--- a/KDZ_CRM_MoiseevR/References.xaml
+++ b/KDZ_CRM_MoiseevR/References.xaml
@@ -5,9 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KDZ_CRM_MoiseevR"
         mc:Ignorable="d"
-        Title="References" Height="300" Width="300">
+        Title="Справочники" Height="275.166" Width="315.894">
     <Grid>
-        <Button x:Name="Back_Menu" Content="Назад в меню" HorizontalAlignment="Left" Margin="87,180,0,0" VerticalAlignment="Top" Width="137" Click="Back_Menu_Click"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="10"/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="10"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="10"/>
+            <RowDefinition/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+
+        <DataGrid x:Name="dataGrid_Ref" Grid.Column="1" Grid.Row="1"/>
+        <Button x:Name="Back_Menu" Content="Назад в меню" HorizontalAlignment="Left" Margin="61,12,0,0" VerticalAlignment="Top" Width="137" Click="Back_Menu_Click" Grid.Column="1" Grid.Row="2"/>
         <Frame Name="FrameReferences" NavigationUIVisibility="Hidden" Margin="0,0,0,139">
 
         </Frame>
