--- a/KDZ_CRM_MoiseevR/Company_Search_Admin.xaml
+++ b/KDZ_CRM_MoiseevR/Company_Search_Admin.xaml
@@ -5,16 +5,30 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KDZ_CRM_MoiseevR"
         mc:Ignorable="d"
-        Title="Company_Search" Height="300" Width="300" Loaded="Window_Loaded">
+        Title="Компании" Height="308.94" Width="401.325" Loaded="Window_Loaded">
     <Window.Resources>
         <local:CRM_DatabaseDataSet x:Key="cRM_DatabaseDataSet"/>
         <CollectionViewSource x:Key="company_ProtectedViewSource" Source="{Binding Company_Protected, Source={StaticResource cRM_DatabaseDataSet}}"/>
     </Window.Resources>
     <Grid DataContext="{StaticResource company_ProtectedViewSource}">
-        <Button x:Name="Back_Menu" Content="Назад в меню" HorizontalAlignment="Left" Margin="193,197,0,0" VerticalAlignment="Top" Width="86" Click="Back_Menu_Click"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="10"/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="10"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="10"/>
+            <RowDefinition/>
+            <RowDefinition Height="70"/>
+        </Grid.RowDefinitions>
+        
+        
+        <Button x:Name="Back_Menu" Content="Назад в меню" HorizontalAlignment="Left" Margin="96,24,0,0" VerticalAlignment="Top" Width="86" Click="Back_Menu_Click" Grid.Column="1" Grid.Row="2"/>
         <Frame Name="FrameCompanySearch_Admin" NavigationUIVisibility="Hidden" Margin="5,50,0,135">
 
         </Frame>
-        <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Margin="6,12,0,0" VerticalAlignment="Top" Width="276" Height="157" SelectionChanged="dataGrid_SelectionChanged" ItemsSource="{Binding}"/>
+        <DataGrid x:Name="dataGrid" SelectionChanged="dataGrid_SelectionChanged" ItemsSource="{Binding}" Grid.Column="1" Grid.Row="1"/>
+        <StackPanel HorizontalAlignment="Left" Height="100" Margin="292,-24,-100,0" VerticalAlignment="Top" Width="100"/>
     </Grid>
 </Window>
