--- a/KDZ_CRM_MoiseevR/Company_Search_User.xaml
+++ b/KDZ_CRM_MoiseevR/Company_Search_User.xaml
@@ -23,12 +23,12 @@
 
         <TextBox x:Name="Comp_ID" HorizontalAlignment="Left" Height="23" Margin="4,32,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="38" TextChanged="Comp_ID_TextChanged" Grid.Column="1" Grid.Row="2"/>
         <TextBox x:Name="Comp_Name" HorizontalAlignment="Left" Height="23" Margin="69,32,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="205" TextChanged="Comp_Name_TextChanged" Grid.Column="1" Grid.Row="2"/>
-        <TextBox x:Name="Comp_Web" HorizontalAlignment="Left" Height="23" Margin="6,28,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="145" Grid.Column="2" Grid.Row="2"/>
-        <TextBox x:Name="City_Name" HorizontalAlignment="Left" Height="23" Margin="142,88,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="129" Grid.Column="1" Grid.Row="2"/>
-        <TextBox x:Name="Comp_Adress" HorizontalAlignment="Left" Height="23" Margin="6,87,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="144" Grid.Column="2" Grid.Row="2"/>
-        <TextBox x:Name="Comp_Email" HorizontalAlignment="Left" Height="23" Margin="5,88,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Grid.Column="1" Grid.Row="2"/>
-        <TextBox x:Name="Comp_Contact_Telephone" HorizontalAlignment="Left" Height="23" Margin="65,147,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="188" Grid.Column="1" Grid.Row="2"/>
-        <TextBox x:Name="Comp_Additional_Info" HorizontalAlignment="Left" Height="23" Margin="8,202,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="256" Grid.Column="1" Grid.Row="2"/>
+        <TextBox x:Name="Comp_Website" HorizontalAlignment="Left" Height="23" Margin="6,28,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="145" Grid.Column="2" Grid.Row="2" TextChanged="Comp_Website_TextChanged"/>
+        <TextBox x:Name="City_Name" HorizontalAlignment="Left" Height="23" Margin="142,88,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="129" Grid.Column="1" Grid.Row="2" TextChanged="City_Name_TextChanged"/>
+        <TextBox x:Name="Comp_Adress" HorizontalAlignment="Left" Height="23" Margin="6,87,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="144" Grid.Column="2" Grid.Row="2" TextChanged="Comp_Adress_TextChanged"/>
+        <TextBox x:Name="Comp_Email" HorizontalAlignment="Left" Height="23" Margin="5,88,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Grid.Column="1" Grid.Row="2" TextChanged="Comp_Email_TextChanged"/>
+        <TextBox x:Name="Comp_Contact_Telephone" HorizontalAlignment="Left" Height="23" Margin="65,147,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="188" Grid.Column="1" Grid.Row="2" TextChanged="Comp_Contact_Telephone_TextChanged"/>
+        <TextBox x:Name="Comp_Additional_Info" HorizontalAlignment="Left" Height="23" Margin="8,202,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="256" Grid.Column="1" Grid.Row="2" TextChanged="Comp_Additional_Info_TextChanged"/>
         <ListView x:Name="Company_listView" BorderThickness="1" SelectionChanged="Company_listView_SelectionChanged" Grid.Column="1" Grid.Row="1">
             <ListView.ItemTemplate>
                 <DataTemplate>
@@ -53,8 +53,8 @@
         <TextBlock x:Name="textBlock_CompPhone" HorizontalAlignment="Left" Margin="68,125,0,0" TextWrapping="Wrap" Text="Контактный телефон" VerticalAlignment="Top" Grid.Column="1" Grid.Row="2"/>
         <TextBlock x:Name="textBlock_CompAdINfo" HorizontalAlignment="Left" Margin="12,178,0,0" TextWrapping="Wrap" Text="Дополнительная информация" VerticalAlignment="Top" Grid.Column="1" Grid.Row="2" Width="245"/>
         <Button x:Name="button_NewComp" Content="Новая запись" HorizontalAlignment="Stretch" Margin="10,80,10,0" VerticalAlignment="Top" Width="120" Height="25" Click="button_NewComp_Click" Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2"/>
-        <Button x:Name="button_Save" Content="Сохранить" HorizontalAlignment="Stretch" Margin="10,115,10,0" VerticalAlignment="Top" Width="120" Height="25" Click="button_Save_Click" Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2"/>
-        <Button x:Name="button_Person" Content="Контактные лица" Grid.Column="2" HorizontalAlignment="Left" Margin="13,168,0,0" Grid.Row="2" VerticalAlignment="Top" Width="131" Height="29"/>
+        <Button x:Name="button_Save" Content="Сохранить" HorizontalAlignment="Stretch" Margin="10,115,10,0" VerticalAlignment="Top" Width="120" Height="25" Click="Button_Save_Click" Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2"/>
+        <Button x:Name="button_Person" Content="Контактные лица" Grid.Column="2" HorizontalAlignment="Left" Margin="13,168,0,0" Grid.Row="2" VerticalAlignment="Top" Width="131" Height="29" Click="button_Person_Click"/>
         <TextBlock x:Name="textBlock" Grid.Column="1" HorizontalAlignment="Left" Margin="259,-89,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
     </Grid>
 </Window>
